# api/swagger/swagger.yaml
@@ -62,6 +62,10 @@ paths:
           in: query
           type: string
           description: Returns all users in any of the given group. Can give an array - eg. group_in=3,5,9
+        - name: vertical_id
+          in: query
+          type: integer
+          description: Return all users of the given vertical
         - name: city_id
           in: query
           type: integer
@@ -2901,6 +2905,7 @@ definitions:
           - cant_go
       reason:
         type: string
+
   SurveyTemplate:
     type: "object"
     properties:
@@ -2922,6 +2927,8 @@ definitions:
           - Student
           - Center
           - City
+      options:
+        type: string
       status:
         type: string
         enum:
@@ -2964,6 +2971,8 @@ definitions:
           - 0
       sort_order:
         type: integer
+      options:
+        type: string
       status:
         type: string
         enum:
@@ -2984,6 +2993,8 @@ definitions:
         type: integer
       sort_order:
         type: integer
+      options:
+        type: string
       status:
         type: string
         enum:
