# app/Http/routes.php
@@ -272,7 +272,7 @@ $app->addRoute(['POST','GET'], '/users/login', function(Request $request) use ($
 // $app->post('/users/{user_id}','UserController@edit');
 
 $app->get('/users', function(Request $request) use ($app) {
-	$search_fields = ['id','identifier', 'name','phone','email','mad_email','group_id','group_in','city_id','user_type','center_id','project_id', 'not_user_type'];
+	$search_fields = ['id','identifier', 'name','phone','email','mad_email','group_id','group_in','vertical_id','city_id','user_type','center_id','project_id', 'not_user_type'];
 	$search = [];
 	foreach ($search_fields as $key) {
 		if(!$request->input($key)) continue;
